flapivor/tests/m1/hopix/parser/good/08-lexer-all-id-1.hopix
def `fine` (x, y) = 0
val `fine = 0
val fine = 0