flapivor/tests/m1/hopix/parser/bad/79-application-3.hopix
val beta = (fn (x) => x) (0)